# RustcraftSetup2

./: .gitignore  Cargo.toml  README.md  VERSION_CODES.md  index.html
.github/workflows/: ci.yml  deploy-page.yaml  release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
assets/blocks_types/: group.btypes.ron
assets/locales/ru_RU/menu/: menu.flt.yml  title_screen.flt
assets/shaders/: voxel copy.wgsl  voxel.wgsl
assets/textures/blocks/: Cobblestone.aseprite  dirt.aseprite  grass_only_on_side.aseprite  grass_side.aseprite  grass_up.aseprite
credits/: CREDITS.md
mobile/: Cargo.toml  Makefile  manifest.yaml
mobile/ios-src/: LaunchScreen.storyboard
mobile/src/: lib.rs
src/: camera.rs  constants.rs  debug.rs  lib.rs  main.rs  os.rs  prelude.rs
src/arh/voxel/: consts.rs  mod.rs
src/arh/voxel/blocks/: block.rs  image_storage.rs  mod.rs  storage.rs
src/arh/voxel/chunks/: chunk.rs  chunks.rs  compressed_chunk.rs  mod.rs  update_chunks.rs
src/arh/voxel/render/: mesh.rs  mod.rs  voxel_render.rs
src/config/: mod.rs
src/interface/: constants.rs  mod.rs
src/interface/config/: mod.rs
src/interface/locale/: mod.rs
src/interface/player/: mod.rs
src/interface/render/: camera.rs  mesh.rs  mod.rs  util.rs
src/interface/render/voxel/: chunk.rs  mod.rs
src/interface/render/voxel/blocks/: image_storage.rs  load.rs  mod.rs  storage.rs
src/interface/resources/: embedded.rs  mod.rs
src/locale/: mod.rs
src/render/: mod.rs
src/resources/: blocks.rs  embedded.rs  load.rs  mod.rs
src/utils/: mesh.rs  mod.rs
src/voxel/: block.rs  chunk.rs  chunks.rs  mesh.rs  mesh_gen.rs  mesh_utils.rs  mod.rs  voxel_render.rs
src/voxel/blocks/: block.rs  load.rs  mod.rs  storage.rs
src/voxel/chunks/: chunk.rs
